# varys

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: setup-signing.sh
src/: main.tsx  styles.css  tauri.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_mic.rs  audio_mixer.rs  audio_system.rs  commands.rs  error.rs  lib.rs  main.rs  metal.rs  model.rs  onboarding.rs  recording.rs  settings.rs  state.rs  storage.rs  transcribe.rs  transcription.rs  tray.rs
src-tauri/src/detection/: mod.rs  native_apps.rs
src-tauri/swift-helper/: Package.swift  README.md
src-tauri/swift-helper/Sources/sckit_capture/: main.swift
src/components/: Logo.tsx
src/onboarding/: OnboardingApp.tsx  onboarding.css
src/settings/: SettingsApp.tsx
src/settings/panes/: AboutPane.tsx  GeneralPane.tsx  ModelsPane.tsx  PermissionsPane.tsx
