[package]
name = "lord_varys"
version = "0.2.1"
description = "Ambient meeting memory for macOS"
authors = ["Mithun S"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lord_varys_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "process", "io-util"] }

# Audio
cpal = "0.15"
hound = "3.5"

# Speech-to-text (whisper.cpp bindings, Metal-accelerated on macOS)
whisper-rs = { version = "0.11", features = ["metal"] }

# HTTP client for whisper-model download
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"

# KV settings store
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
parking_lot = "0.12"
once_cell = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
block = "0.1"
core-foundation = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Same workaround soll uses for `objc 0.2`'s internal `cargo-clippy` cfg.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
